--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       width: 100%;
       max-width: 400px;
+      position: relative;
     }
     h2 {
       text-align: center;
@@ -70,6 +71,31 @@
       color: #991b1b;
       border: 1px solid #ef4444;
     }
+    /* Loading overlay */
+    .loading {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255,255,255,0.8);
+      justify-content: center;
+      align-items: center;
+      border-radius: 15px;
+    }
+    .spinner {
+      border: 4px solid #ddd;
+      border-top: 4px solid #4f46e5;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -107,6 +133,11 @@
       <button type="submit">Saqlash</button>
     </form>
     <div id="notification" class="notification"></div>
+
+    <!-- Loading -->
+    <div class="loading" id="loading">
+      <div class="spinner"></div>
+    </div>
   </div>
 
   <script>
@@ -122,7 +153,7 @@
       document.getElementById("sana").value = `${yyyy}-${mm}-${dd}`;
     }
 
-    // Kategoriyalarni yuklash
+    // Kategoriyalarni yuklash (sayt ochilganda)
     async function loadKategoriyalar() {
       try {
         const res = await fetch(SCRIPT_URL);
@@ -132,7 +163,7 @@
       }
     }
 
-    // Tur o'zgarganda kategoriyalarni ko'rsatish
+    // Tur o'zgarganda kategoriyalarni tez ko'rsatish
     document.getElementById("tur").addEventListener("change", function() {
       const tur = this.value;
       const kategoriyaSelect = document.getElementById("kategoriya");
@@ -160,6 +191,8 @@
         qoshimcha: document.getElementById("qoshimcha").value,
       };
 
+      showLoading(true);
+
       try {
         const res = await fetch(SCRIPT_URL, {
           method: "POST",
@@ -172,8 +205,15 @@
         setTodayDate(); // resetdan keyin bugungi sana qaytadan qo‘yiladi
       } catch (err) {
         showNotification("Xatolik yuz berdi, qayta urinib ko'ring.", "error");
+      } finally {
+        showLoading(false);
       }
     });
+
+    // Loading overlay
+    function showLoading(show) {
+      document.getElementById("loading").style.display = show ? "flex" : "none";
+    }
 
     // Bildirishnoma
     function showNotification(message, type) {
@@ -185,9 +225,9 @@
     }
 
     // Sahifa yuklanganda
-    window.onload = () => {
-      setTodayDate();   // Sana = bugungi sana
-      loadKategoriyalar(); // Kategoriyalarni yuklash
+    window.onload = async () => {
+      setTodayDate();
+      await loadKategoriyalar(); // kategoriyalarni oldindan yuklab olamiz
     }
   </script>
 </body>
