--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       width: 100%;
       max-width: 400px;
       position: relative;
+      display: none; /* sahifa yuklanguncha ko‘rinmaydi */
     }
     h2 {
       text-align: center;
@@ -73,23 +74,23 @@
     }
     /* Loading overlay */
     .loading {
-      display: none;
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255,255,255,0.8);
+      background: rgba(255,255,255,0.9);
+      display: flex;
       justify-content: center;
       align-items: center;
-      border-radius: 15px;
+      z-index: 999;
     }
     .spinner {
       border: 4px solid #ddd;
       border-top: 4px solid #4f46e5;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       animation: spin 1s linear infinite;
     }
     @keyframes spin {
@@ -99,7 +100,12 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <!-- Loading sahifa ochilganda -->
+  <div class="loading" id="loading">
+    <div class="spinner"></div>
+  </div>
+
+  <div class="container" id="main-container">
     <h2>Kirim / Chiqim Formasi</h2>
     <form id="dataForm">
       <label for="sana">Sana:</label>
@@ -132,18 +138,13 @@
       <button type="submit">Saqlash</button>
     </form>
     <div id="notification" class="notification"></div>
-
-    <!-- Loading -->
-    <div class="loading" id="loading">
-      <div class="spinner"></div>
-    </div>
   </div>
 
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw3ymKU0ee1dE3NWT5v8UrCJddfewnsNT5f-4KaiQR6CvxLQiPDua9KZDfEMmWSUbbe5g/exec";
     let kategoriyalar = { Kirim: [], Chiqim: [] };
 
-    // Bugungi sanani qo‘yish (o‘zgartirish mumkin)
+    // Bugungi sanani qo‘yish
     function setTodayDate() {
       const today = new Date();
       const yyyy = today.getFullYear();
@@ -152,17 +153,22 @@
       document.getElementById("sana").value = `${yyyy}-${mm}-${dd}`;
     }
 
-    // Kategoriyalarni yuklash (sayt ochilganda)
+    // Kategoriyalarni yuklash
     async function loadKategoriyalar() {
       try {
         const res = await fetch(SCRIPT_URL);
         kategoriyalar = await res.json();
+
+        // Yuklanib bo‘lgach formani ko‘rsatamiz
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("main-container").style.display = "block";
       } catch (err) {
         console.error("Kategoriya yuklashda xato:", err);
+        alert("Kategoriya yuklashda xato yuz berdi!");
       }
     }
 
-    // Tur o'zgarganda kategoriyalarni tez ko'rsatish
+    // Tur o'zgarganda kategoriyalarni ko‘rsatish
     document.getElementById("tur").addEventListener("change", function() {
       const tur = this.value;
       const kategoriyaSelect = document.getElementById("kategoriya");
@@ -181,6 +187,8 @@
     // Forma yuborish
     document.getElementById("dataForm").addEventListener("submit", async function(e) {
       e.preventDefault();
+      document.getElementById("loading").style.display = "flex"; // yuborilganda ham loading
+
       const formData = {
         sana: document.getElementById("sana").value,
         tur: document.getElementById("tur").value,
@@ -190,29 +198,22 @@
         qoshimcha: document.getElementById("qoshimcha").value,
       };
 
-      showLoading(true);
-
       try {
         const res = await fetch(SCRIPT_URL, {
           method: "POST",
           body: JSON.stringify(formData),
         });
 
-        const result = await res.json();
-        showNotification("Ma'lumot muvaffaqiyatli saqlandi!", "success");
+        await res.json();
+        showNotification("✅ Ma'lumot muvaffaqiyatli saqlandi!", "success");
         document.getElementById("dataForm").reset();
-        setTodayDate(); // resetdan keyin bugungi sana qaytadan qo‘yiladi
+        setTodayDate();
       } catch (err) {
-        showNotification("Xatolik yuz berdi, qayta urinib ko'ring.", "error");
+        showNotification("❌ Xatolik yuz berdi, qayta urinib ko‘ring.", "error");
       } finally {
-        showLoading(false);
+        document.getElementById("loading").style.display = "none";
       }
     });
-
-    // Loading overlay
-    function showLoading(show) {
-      document.getElementById("loading").style.display = show ? "flex" : "none";
-    }
 
     // Bildirishnoma
     function showNotification(message, type) {
@@ -226,7 +227,7 @@
     // Sahifa yuklanganda
     window.onload = async () => {
       setTodayDate();
-      await loadKategoriyalar(); // kategoriyalarni oldindan yuklab olamiz
+      await loadKategoriyalar();
     }
   </script>
 </body>
