--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       width: 100%;
       max-width: 400px;
       position: relative;
-      display: none; /* sahifa yuklanguncha ko‘rinmaydi */
+      display: none; /* sahifa yuklanguncha yashirin */
     }
     h2 {
       text-align: center;
@@ -54,24 +54,7 @@
     button:hover {
       background: #4338ca;
     }
-    .notification {
-      display: none;
-      margin-top: 15px;
-      padding: 12px;
-      border-radius: 8px;
-      text-align: center;
-      font-weight: bold;
-    }
-    .success {
-      background: #dcfce7;
-      color: #166534;
-      border: 1px solid #22c55e;
-    }
-    .error {
-      background: #fee2e2;
-      color: #991b1b;
-      border: 1px solid #ef4444;
-    }
+
     /* Loading overlay */
     .loading {
       position: fixed;
@@ -79,11 +62,13 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255,255,255,0.8);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 999;
+      backdrop-filter: blur(3px);
     }
     .spinner {
       border: 4px solid #ddd;
@@ -92,17 +77,44 @@
       width: 50px;
       height: 50px;
       animation: spin 1s linear infinite;
+      margin-bottom: 15px;
+    }
+    .loading-text {
+      font-size: 16px;
+      font-weight: bold;
+      color: #333;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+
+    /* Toast bildirishnoma */
+    .toast {
+      position: fixed;
+      top: 20px;
+      right: -400px; /* dastlab tashqarida */
+      background: #4f46e5;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      font-weight: bold;
+      transition: right 0.5s ease;
+      z-index: 1000;
+    }
+    .toast.show {
+      right: 20px; /* ko‘rinadigan joyga chiqadi */
+    }
+    .toast.success { background: #22c55e; }
+    .toast.error { background: #ef4444; }
   </style>
 </head>
 <body>
-  <!-- Loading sahifa ochilganda -->
+  <!-- Yuklanish oynasi -->
   <div class="loading" id="loading">
     <div class="spinner"></div>
+    <div class="loading-text">⏳ Ma'lumotlar yuklanmoqda...</div>
   </div>
 
   <div class="container" id="main-container">
@@ -137,14 +149,16 @@
 
       <button type="submit">Saqlash</button>
     </form>
-    <div id="notification" class="notification"></div>
   </div>
+
+  <!-- Toast bildirishnoma -->
+  <div id="toast" class="toast"></div>
 
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw3ymKU0ee1dE3NWT5v8UrCJddfewnsNT5f-4KaiQR6CvxLQiPDua9KZDfEMmWSUbbe5g/exec";
     let kategoriyalar = { Kirim: [], Chiqim: [] };
 
-    // Bugungi sanani qo‘yish
+    // Bugungi sana
     function setTodayDate() {
       const today = new Date();
       const yyyy = today.getFullYear();
@@ -159,16 +173,16 @@
         const res = await fetch(SCRIPT_URL);
         kategoriyalar = await res.json();
 
-        // Yuklanib bo‘lgach formani ko‘rsatamiz
+        // Forma ko‘rinadi, loading yopiladi
         document.getElementById("loading").style.display = "none";
         document.getElementById("main-container").style.display = "block";
       } catch (err) {
         console.error("Kategoriya yuklashda xato:", err);
-        alert("Kategoriya yuklashda xato yuz berdi!");
+        showToast("❌ Kategoriyalar yuklanmadi!", "error");
       }
     }
 
-    // Tur o'zgarganda kategoriyalarni ko‘rsatish
+    // Tur o'zgarganda kategoriyalarni qo‘yish
     document.getElementById("tur").addEventListener("change", function() {
       const tur = this.value;
       const kategoriyaSelect = document.getElementById("kategoriya");
@@ -187,7 +201,7 @@
     // Forma yuborish
     document.getElementById("dataForm").addEventListener("submit", async function(e) {
       e.preventDefault();
-      document.getElementById("loading").style.display = "flex"; // yuborilganda ham loading
+      document.getElementById("loading").style.display = "flex";
 
       const formData = {
         sana: document.getElementById("sana").value,
@@ -203,25 +217,25 @@
           method: "POST",
           body: JSON.stringify(formData),
         });
-
         await res.json();
-        showNotification("✅ Ma'lumot muvaffaqiyatli saqlandi!", "success");
+        showToast("✅ Ma'lumot muvaffaqiyatli saqlandi!", "success");
         document.getElementById("dataForm").reset();
         setTodayDate();
       } catch (err) {
-        showNotification("❌ Xatolik yuz berdi, qayta urinib ko‘ring.", "error");
+        showToast("❌ Xatolik yuz berdi, qayta urinib ko‘ring.", "error");
       } finally {
         document.getElementById("loading").style.display = "none";
       }
     });
 
-    // Bildirishnoma
-    function showNotification(message, type) {
-      const note = document.getElementById("notification");
-      note.textContent = message;
-      note.className = `notification ${type}`;
-      note.style.display = "block";
-      setTimeout(() => { note.style.display = "none"; }, 3000);
+    // Toast bildirishnoma
+    function showToast(message, type) {
+      const toast = document.getElementById("toast");
+      toast.textContent = message;
+      toast.className = `toast ${type} show`;
+      setTimeout(() => {
+        toast.classList.remove("show");
+      }, 3000);
     }
 
     // Sahifa yuklanganda
