--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       <select id="tolov" name="tolov" required>
         <option value="Naqd">Naqd</option>
         <option value="Plastik">Plastik</option>
+        <option value="Bank">Bank</option>
       </select>
 
       <label for="qoshimcha">Qo'shimcha:</label>
@@ -155,7 +156,7 @@
   <div id="toast" class="toast"></div>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxQkqIA0q1GB904yDmtvaWudjIdGWCrO9pfHa99W6qjo-FgJxerTWIXnBkeyV_UFnaRKA/exec";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw3ymKU0ee1dE3NWT5v8UrCJddfewnsNT5f-4KaiQR6CvxLQiPDua9KZDfEMmWSUbbe5g/exec";
     let kategoriyalar = { Kirim: [], Chiqim: [] };
 
     // Bugungi sana
